# takt

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  Setup-Keyme.cmd  Setup-Takt.cmd  package-lock.json  package.json
config/: default.json
docs/: architecture.md  privacy.md  profiles.md  windows-install.md
electron/: check.cjs  main.cjs  preload.cjs
electron/renderer/: app.js  index.html  styles.css
scripts/: install.ps1  keyme-control.ps1  launch-hidden.vbs  run.ps1  stop-hidden.vbs  stop.ps1  uninstall.ps1
sounds/: README.md
src/: main.rs
