[package]
name = "keyme"
version = "0.1.0"
edition = "2024"
description = "Mechanical keyboard sounds for Windows"
license = "MIT"
repository = "https://github.com/OWNER/keyme"

[dependencies]
anyhow = "1.0"
ctrlc = "3.4"
rodio = "0.19"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
